allow only one user per email address
